--- a/Cinemalek/Areas/Admin/Views/Movie/Index.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Movie/Index.cshtml
@@ -57,7 +57,7 @@
                    
                     <div class="col-md-3 mb-2">
                         <!-- filter by status -->
-                        <select class="form-select" name="status">
+                        <select class="form-select" name="Status">
                             <option value="">All Status</option>
                             <option value="true" selected="@(Model.Filter?.Status == true)">Available  </option>
                             <option value="false"selected="@(Model.Filter?.Status == false)"> Not Available </option>
