--- a/Cinemalek/Areas/Admin/Views/Category/Index.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Category/Index.cshtml
@@ -2,6 +2,7 @@
 
 <div class="container">
 
+    <partial name="_NotificationPartial.cshtml" />
     <!-- Header -->
     <div class="row mb-3 align-items-center my-3">
         <div class="col-md-6">
