--- a/Cinemalek/Areas/Admin/Views/Movie/Edit.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Movie/Edit.cshtml
@@ -8,7 +8,7 @@
     </div>
 
     <form method="post" enctype="multipart/form-data" asp-action="Edit" asp-route-id="@Model.Movie?.Id">
-
+        <input type="hidden" name="Movie.Id" value="@Model.Movie?.Id" />
         <!-- Movie Name -->
         <div class="mb-3">
             <label class="form-label">Movie Name</label>
