--- a/Cinemalek/Views/Shared/_AdminLayout.cshtml
+++ b/Cinemalek/Views/Shared/_AdminLayout.cshtml
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Falcon | Dashboard &amp; Web App Template</title>
+    <title> | Dashboard &amp; Web App Template</title>
 
 
     <!-- ===============================================-->
@@ -39,6 +39,7 @@
     <link href="~/Admin/assets/css/user.min.css" rel="stylesheet" id="user-style-default">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
     <script>
       var isRTL = JSON.parse(localStorage.getItem('isRTL'));
@@ -86,7 +87,7 @@
               <button class="btn navbar-toggler-humburger-icon navbar-vertical-toggle" data-bs-toggle="tooltip" data-bs-placement="left" title="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
 
             </div><a class="navbar-brand" href="~/Admin/index.html">
-              <div class="d-flex align-items-center py-3"><img class="me-2" src="~/Admin/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif">falcon</span>
+              <div class="d-flex align-items-center py-3"><img class="me-2" src="~/Admin/assets/img/icons/spot-illustrations/.png" alt="" width="40" /><span class="font-sans-serif"></span>
               </div>
             </a>
           </div>
@@ -193,12 +194,12 @@
               <div class="settings mb-3">
                 <div class="card shadow-none">
                   <div class="card-body alert mb-0" role="alert">
-                    <div class="btn-close-falcon-container">
-                      <button class="btn btn-link btn-close-falcon p-0" aria-label="Close" data-bs-dismiss="alert"></button>
+                    <div class="btn-close--container">
+                      <button class="btn btn-link btn-close- p-0" aria-label="Close" data-bs-dismiss="alert"></button>
                     </div>
                     <div class="text-center"><img src="~/Admin/assets/img/icons/spot-illustrations/navbar-vertical.png" alt="" width="80" />
-                      <p class="fs--2 mt-2">Loving what you see? <br />Get your copy of <a href="#!">Falcon</a></p>
-                      <div class="d-grid"><a class="btn btn-sm btn-purchase" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a></div>
+                      <p class="fs--2 mt-2">Loving what you see? <br />Get your copy of <a href="#!"></a></p>
+                      <div class="d-grid"><a class="btn btn-sm btn-purchase" href="https://themes.getbootstrap.com/product/-admin-dashboard-webapp-template/" target="_blank">Purchase</a></div>
                     </div>
                   </div>
                 </div>
@@ -212,7 +213,7 @@
                 <button class="btn navbar-toggler-humburger-icon navbar-toggler me-1 me-sm-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarVerticalCollapse" aria-controls="navbarVerticalCollapse" aria-expanded="false" aria-label="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
                 <a class="navbar-brand me-1 me-sm-3" href="~/Admin/index.html">
                     <div class="d-flex align-items-center">
-                        <img class="me-2" src="~/Admin/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif">falcon</span>
+                        <img class="me-2" src="~/Admin/assets/img/icons/spot-illustrations/.png" alt="" width="40" /><span class="font-sans-serif"></span>
                     </div>
                 </a>
                 <ul class="navbar-nav align-items-center d-none d-lg-block">
@@ -223,8 +224,8 @@
                                 <span class="fas fa-search search-box-icon"></span>
 
                             </form>
-                            <div class="btn-close-falcon-container position-absolute end-0 top-50 translate-middle shadow-none" data-bs-dismiss="search">
-                                <button class="btn btn-link btn-close-falcon p-0" aria-label="Close"></button>
+                            <div class="btn-close--container position-absolute end-0 top-50 translate-middle shadow-none" data-bs-dismiss="search">
+                                <button class="btn btn-link btn-close- p-0" aria-label="Close"></button>
                             </div>
                             <div class="dropdown-menu border font-base start-0 mt-2 py-0 overflow-hidden w-100">
                                 <div class="scrollbar list py-3" style="max-height: 24rem;">
@@ -277,7 +278,7 @@
                                         <div class="d-flex align-items-center">
                                             <div class="file-thumbnail me-2"><img class="img-fluid" src="~/Admin/assets/img/icons/zip.png" alt="" /></div>
                                             <div class="flex-1">
-                                                <h6 class="mb-0 title">Falcon v1.8.2</h6>
+                                                <h6 class="mb-0 title"> v1.8.2</h6>
                                                 <p class="fs--2 mb-0 d-flex"><span class="fw-semi-bold">John</span><span class="fw-medium text-600 ms-2">30 Sep at 12:30 PM</span></p>
                                             </div>
                                         </div>
@@ -619,7 +620,7 @@
             <footer class="footer">
                 <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
                     <div class="col-12 col-sm-auto text-center">
-                        <p class="mb-0 text-600">Thank you for creating with Falcon <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" /> 2022 &copy; <a href="https://themewagon.com">Themewagon</a></p>
+                        <p class="mb-0 text-600">Thank you for creating with  <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" /> 2022 &copy; <a href="https://themewagon.com">Themewagon</a></p>
                     </div>
                     <div class="col-12 col-sm-auto text-center">
                         <p class="mb-0 text-600">v3.14.0</p>
@@ -633,7 +634,7 @@
               <div class="modal-header px-5 position-relative modal-shape-header bg-shape">
                 <div class="position-relative z-index-1 light">
                   <h4 class="mb-0 text-white" id="authentication-modal-label">Register</h4>
-                  <p class="fs--1 mb-0 text-white">Please create your free Falcon account</p>
+                  <p class="fs--1 mb-0 text-white">Please create your free  account</p>
                 </div>
                 <button class="btn-close btn-close-white position-absolute top-0 end-0 mt-2 me-2" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
@@ -702,11 +703,11 @@
           <div class="row gx-2">
             <div class="col-6">
               <input class="btn-check" id="themeSwitcherLight" name="theme-color" type="radio" value="light" data-theme-control="theme" />
-              <label class="btn d-inline-block btn-navbar-style fs--1" for="themeSwitcherLight"> <span class="hover-overlay mb-2 rounded d-block"><img class="img-fluid img-prototype mb-0" src="~/Admin/assets/img/generic/falcon-mode-default.jpg" alt=""/></span><span class="label-text">Light</span></label>
+              <label class="btn d-inline-block btn-navbar-style fs--1" for="themeSwitcherLight"> <span class="hover-overlay mb-2 rounded d-block"><img class="img-fluid img-prototype mb-0" src="~/Admin/assets/img/generic/-mode-default.jpg" alt=""/></span><span class="label-text">Light</span></label>
             </div>
             <div class="col-6">
               <input class="btn-check" id="themeSwitcherDark" name="theme-color" type="radio" value="dark" data-theme-control="theme" />
-              <label class="btn d-inline-block btn-navbar-style fs--1" for="themeSwitcherDark"> <span class="hover-overlay mb-2 rounded d-block"><img class="img-fluid img-prototype mb-0" src="~/Admin/assets/img/generic/falcon-mode-dark.jpg" alt=""/></span><span class="label-text"> Dark</span></label>
+              <label class="btn d-inline-block btn-navbar-style fs--1" for="themeSwitcherDark"> <span class="hover-overlay mb-2 rounded d-block"><img class="img-fluid img-prototype mb-0" src="~/Admin/assets/img/generic/-mode-dark.jpg" alt=""/></span><span class="label-text"> Dark</span></label>
             </div>
           </div>
         </div>
@@ -775,7 +776,7 @@
         </div>
         <div class="text-center mt-5"><img class="mb-4" src="~/Admin/assets/img/icons/spot-illustrations/47.png" alt="" width="120" />
           <h5>Like What You See?</h5>
-          <p class="fs--1">Get Falcon now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/falcon-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
+          <p class="fs--1">Get  now and create beautiful dashboards with hundreds of widgets.</p><a class="mb-3 btn btn-primary" href="https://themes.getbootstrap.com/product/-admin-dashboard-webapp-template/" target="_blank">Purchase</a>
         </div>
       </div>
     </div><a class="card setting-toggle" href="#settings-offcanvas" data-bs-toggle="offcanvas">
@@ -807,12 +808,12 @@
     <script src="~/Admin/vendors/list.js/list.min.js"></script>
     <script src="~/Admin/assets/js/theme.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     
     @RenderSection( "Scripts" , false );
 
