--- a/Cinemalek/Areas/Admin/Views/Movie/Index.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Movie/Index.cshtml
@@ -184,9 +184,10 @@
     </div>
 </div>
 
-
-
-
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
 
 <script>
     document.querySelectorAll(".btn-delete").forEach(btn => {
