--- a/Cinemalek/Areas/Admin/Views/Cinema/Index.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Cinema/Index.cshtml
@@ -93,7 +93,10 @@
     </div>
 </div>
 
-
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
 
 <script>
     document.querySelectorAll(".btn-delete").forEach(btn => {
