--- a/Cinemalek/Areas/Admin/Views/Movie/Edit.cshtml
+++ b/Cinemalek/Areas/Admin/Views/Movie/Edit.cshtml
@@ -136,6 +136,12 @@
     </form>
 </div>
 
+@section Scripts
+{
+    <partial name="_ValidationScriptsPartial" />
+}
+
+
 <script>
     function previewImage(event) {
         const input = event.target;
