--- a/Cinemalek/Areas/Identity/Views/Account/Login.cshtml
+++ b/Cinemalek/Areas/Identity/Views/Account/Login.cshtml
@@ -52,6 +52,10 @@
                                 </div>
                             </div>
                             <div class="mb-3">
+                                <a class="fs--1" asp-controller="Account" asp-action="ForgetPassword">Forget Password?</a>
+                                <a class="fs--1 ms-3" asp-controller="Account" asp-action="ResendEmailConfirmation">Resend Email Confirmation</a>
+                            </div>
+                            <div class="mb-3">
                                 <button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit">LogIn</button>
                             </div>
                         </form>
