--- a/Cinemalek/Areas/Identity/Views/Account/ResetPassword.cshtml
+++ b/Cinemalek/Areas/Identity/Views/Account/ResetPassword.cshtml
@@ -26,7 +26,9 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
                 <div class="mb-3">
-                    <input type="submit" class="btn btn-primary d-block w-100 mt-3" value="Reset Password" />
+                    <button type="submit" class="btn btn-primary d-block w-100 mt-3">
+                        Submit
+                    </button>
                 </div>
             </form>
         </div>
