--- a/Cinemalek/Areas/Identity/Views/Account/ResetPassword.cshtml
+++ b/Cinemalek/Areas/Identity/Views/Account/ResetPassword.cshtml
@@ -12,6 +12,7 @@
             <form asp-action="ResetPassword" asp-controller="Account"asp-area="Identity" method="post">
 
                 @Html.AntiForgeryToken()
+                <input type="hidden" asp-for="ApplicationUserId" />
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" name="Id" value="@Model.Id" />
